Fixed prefix and input misalignment and line break in prefix

--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -65,10 +65,6 @@
       }
     }
 
-    input {
-      line-height: 1.2;
-    }
-
     textarea {
       padding: 0;
       max-height: 224px;
@@ -196,6 +192,7 @@
   .neeto-ui-input__prefix,
   .neeto-ui-input__suffix {
     display: flex;
+    white-space: nowrap !important;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
